added currency dynamics
